[package]
name = "mvtr-demo"
description = "Routing engine in the browser"
version = "0.1.0"
authors = ["Ellen Poe <ellen.h.poe@gmail.com>"]
categories = ["wasm"]
readme = "README.md"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = 's'

[dependencies]
wasm-bindgen = "0.2.100"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
mvtr = { path = "../mvtr" }
console_error_panic_hook = { version = "0.1.7", optional = true }
lazy_static = "1.5.0"
js-sys = "0.3.77"
tracing-wasm = "0.2.1"

# The `web-sys` crate allows you to interact with the various browser APIs,
# like the DOM.
[dependencies.web-sys]
version = "0.3.22"
features = ["console"]

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so it's only enabled
# in debug mode.
[target."cfg(debug_assertions)".dependencies]
console_error_panic_hook = "0.1.5"

# These crates are used for running unit tests.
[dev-dependencies]
wasm-bindgen-test = "0.2.45"
futures = "0.1.27"
js-sys = "0.3.22"
wasm-bindgen-futures = "0.3.22"
