[package]
name = "lycra"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
base64 = "0.22.1"
clap = { version = "4.5", features = ["derive"] }
futures-util = "0.3.31"
geo = "0.30.0"
geo-types = "0.7.17"
geozero = { version = "0.14.0", features = ["with-geo", "with-gpkg", "with-postgis-sqlx"] }
num_cpus = "1.17.0"
roaring = "0.11.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
sqlx = { version = "0.8", features = ["postgres", "sqlite", "runtime-tokio"] }
tokenizers = { version = "0.21.4", features = ["http"] }
tokio = { version = "1.46", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
